# code-review

./: .gitignore  Cargo.toml  README.md  fix.md  implation.md  implementation-plan.md  multi-turn-review-design.md  multi-turn-review-structs.md  newdesign.md  newplan.md  require.md  require2.md  workflow.md
.alma/: todos-mnwxief9lwcndcgr1pq.md  todos-mnyrjm93uazqj6u8tvg.md
docs/: http-api.md  openapi.yaml  review_sessions.sql
src/: admission.rs  api.rs  cli.rs  config.rs  context.rs  conversation.rs  conversation_store.rs  copilot.rs  expand.rs  gitops.rs  jira.rs  lib.rs  main.rs  models.rs  orchestrator.rs  prompt.rs  review_layers.rs  review_parser.rs  review_render.rs  review_schema.rs  review_validate.rs  risk.rs  session.rs
src/providers/: copilot.rs  mod.rs
src/services/: review_service.rs
