[package]
name = "code-review"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
regex = "1"
fs2 = "0.4"
wait-timeout = "0.2"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
